use name for name

--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@
 #
 
 # Name of your site (displayed in the header)
-name: AH-III
+name: David Dhuyvetter
 
 # Name of the author
 author: David Dhuyvetter
